--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
           </article>
         </div>
 
-        <button onclick="readMore()" id="myBtn">Read more</button>
+        <button onclick="readMore()" id="myBtn">Lees meer</button>
       </article>
 
       <div id="map"></div>
