--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
     <section class="reclame-kenmerken">
       <img class="reclame" src="assets/coolblue.png" alt="reclame" />
-      <section class="kenmerken">
+      <article class="kenmerken">
         <h2>Kenmerken</h2>
           <h1>Overdracht</h1>
           <ul>
@@ -235,7 +235,7 @@
             <li>Kan ik dit huis betalen? <a class="bereken" href="">Bereken nu</a></li>
         </ul>
         
-      </section>
+      </article>
     </section>
 
     <script src="scripts/javascript.js"></script>
