--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <section class="contact-parent">
       <!-- <h2>Contact</h2> -->
       <article class="contact-nu">
-        <p>Bel: 0687238281</p>
+        <a class="bel" href="0687238281">Bel: 0687238281</a>
         <a class="contact-button" href="#mail">Stuur een mail</a>
       </article>
     </section>
